<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/input_name"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"/>

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:inputType="textPersonName"
        android:hint="@string/placeholder_input_name"
        android:autofillHints="name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_hero"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"/>

            <RadioGroup
                android:id="@+id/radio_group_hero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_warrior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/hero_warrior"/>

                <RadioButton
                    android:id="@+id/radio_archer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hero_archer"/>

                <RadioButton
                    android:id="@+id/radio_mage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hero_mage"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_class"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"/>

            <RadioGroup
                android:id="@+id/radio_group_warrior_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/radio_champion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/class_warrior_champion"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_paladin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/class_warrior_paladin"/>

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radio_group_archer_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radio_hunter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/class_archer_hunter"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_sniper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/class_archer_sniper"/>

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radio_group_mage_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radio_wizard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/class_mage_wizard"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_sorcerer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/class_mage_sorcerer"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_item"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"/>

            <RadioGroup
                android:id="@+id/radio_group_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_attack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_attack"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_defense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_defense"/>

                <RadioButton
                    android:id="@+id/radio_aspd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_aspd"/>

                <RadioButton
                    android:id="@+id/radio_hp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_hp"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            
            <ImageView
                android:id="@+id/character_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="24dp"
                android:padding="16dp"
                android:src="@drawable/question_mark"
                android:background="@drawable/bg_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/result_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hero"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/result_hero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_class"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/result_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_item"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/result_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_total_bp"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/result_battle_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_result"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>